--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-#output {
+#result {
   display: none;
 }
 
@@ -10,6 +10,6 @@ body {
   margin-bottom: 1rem;
 }
 
-.doctor-count {
+.count {
   font-weight: 500;
 }
